Give thoughts box activity text inputs more room on smaller screens by decreasing padding and surrounding elements, adding padding between rows and centering title text on smaller screens (re. issue 72)

--- a/SWEET/static/css/fillin.css
+++ b/SWEET/static/css/fillin.css
@@ -25,7 +25,26 @@
 
 .thoughts-box {
     padding: 1em 2em;
+    text-align: center;
 }
+
+.thoughts-box header span {
+    font-weight: bold;
+}
+
+/* on smaller devices give more room for form in thoughts box by alternating surrounding elements*/
+@media (max-width: 768px) {
+    .thoughts-box {
+        padding: 1em 0.5em;
+    }
+    .thoughts-box header span {
+        font-weight: normal;
+    }
+    .h3, h3 {
+        font-size: calc(1.3rem + .3vw);
+    }
+}
+
 
 .thoughts-box header {
     justify-content: space-around;
@@ -43,8 +62,7 @@
 .thoughts-box form input[type='text'] {
     flex-basis: 42%;
     min-width: 0;
+    padding: 0.5em;
+    margin: 0.5em;
 }
 
-.thoughts-box header span {
-    font-weight: bold;
-}
